[package]
name = "solar-intermediate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solar-parser = {path="../solar-parser" }
hotel = "0.1.1"                         # Collection Data-structure to associate values with keys
